# rasfocus-exe-test-another-

./: RasAppsCert.pfx  RasObserve.cpp  accounts.cpp  accounts.h  globals.h  html_tools.h  main.cpp  mini_browser.cpp  mini_browser.h  parent_remote.html  prewindow.cpp  prewindow.h  resource.h  resources.rc  tab_adult.cpp  tab_adult.h  tab_blocks.cpp  tab_blocks.h  tab_dashboard.cpp  tab_dashboard.h  tab_deep_study.cpp  tab_deep_study.h  tab_device_block.cpp  tab_device_block.h  tab_diary.cpp  tab_family_link.cpp  tab_family_link.h  tab_gemini.h  tab_schedule_blocks.cpp  tab_schedule_blocks.h  tab_settings.cpp  tab_settings.h  tab_special.cpp  tab_special.h  tab_statistics.cpp  tab_statistics.h  tab_utilities.cpp  tab_utilities.h  upgrade.cpp  upgrade.h
.github/workflows/: main.yml
assets/: adultsites.txt
browser/: CMakeLists.txt  README.md  advanced_feature.cpp  advanced_feature.h  bookmarks.cpp  bookmarks.h  context_menu.cpp  context_menu.h  downloads_panel.cpp  downloads_panel.h  extensions.h  feature_browser.cpp  feature_browser.h  find_in_page.cpp  find_in_page.h  history_panel.cpp  history_panel.h  keyboard_shortcuts.cpp  mini_browser.cpp  rasfocus_config.cpp  rasfocus_config.h  resource.rc  settings.cpp  settings.h
pdf_reader/: tab_pdf_workspace.cpp  tab_pdf_workspace.h  tab_pdf_workspace_part1_css.cpp  tab_pdf_workspace_part2_html.cpp  tab_pdf_workspace_part3_js_core.cpp  tab_pdf_workspace_part4_js_advanced.cpp
